--- a/index.html
+++ b/index.html
@@ -6,8 +6,70 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>first-website</title>
     <link rel="stylesheet" href="styles/styles.css">
+
+    <!-- font awesome link here  -->
+
+    <script src="https://kit.fontawesome.com/d6c60e3d12.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    
+    <header>
+        <div class="header-container">
+            <h1>All Thinks Are Possible If You believe</h1>
+            <p>There are many variations of passages of lorem ipsum available, but the majority have suffered alternation in some form, by injected humour, or randomised words</p>
+            <button class="btn-primary">Contact Us</button>
+        </div>
+    </header>
+
+    <!-- header finish -->
+
+    <!-- main section start -->
+    <main>
+        <section class="year-container">
+            <div class="year-container-img">
+                <img src="/images/person.png" alt="">
+            </div>
+            <div class="year-container-text">
+                <h2>My failures of previous year</h2>
+                <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+                <p><i class="fas fa-check"></i> Contrary to popular belief, is not simply.</p>
+                <p><i class="fas fa-check"></i> Contrary to popular belief.</p>
+                <p><i class="fas fa-check"></i> Contrary to popular , is not simply.</p>
+                <p><i class="fas fa-check"></i> Contrary to popular belief, is not simply.</p>
+                <p><i class="fas fa-check"></i> Contrary to popular simply.</p>
+            </div>
+        </section>
+
+        <!-- year section finish -->
+
+        <!-- plan section start -->
+
+        <section>
+            <div class="plans-tittle">
+                <h2>My Plans</h2>
+            </div>
+            <div class="plans-container">
+                <div class="single-item">
+                    <img src="/images/icons/web.png" alt="">
+                    <h2>Web Development</h2>
+                    <p>I want to start</p>
+                </div>
+                <div class="single-item">
+                    <img src="/images/icons/js.png" alt="">
+                    <h2>Javascript</h2>
+                    <p>I want to learn</p>
+                </div>
+                <div class="single-item">
+                    <img src="/images/icons/smoke.png" alt="">
+                    <h2>Smoking Habit</h2>
+                    <p>I want to end</p>
+                </div>
+                <div class="single-item">
+                    <img src="/images/icons/ecom.png" alt="">
+                    <h2>E-commerce</h2>
+                    <p>I want to develop</p>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
