not shown images

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <div class="header-container">
             <h1>All Thinks Are Possible If You believe</h1>
-            <p>There are many variations of passages of lorem ipsum available, but the majority have suffered alternation in some form, by injected humour, or randomised words</p>
+            <p>There are many variations of passages of lorem ipsum available, but the majority have suffered alternation in some form, by injected humour, or randomize words</p>
             <button class="btn-primary">Contact Us</button>
         </div>
     </header>
@@ -26,11 +26,11 @@
     <main>
         <section class="year-container">
             <div class="year-container-img">
-                <img src="/images/person.png" alt="">
+                <img src="images/person.png" alt="">
             </div>
             <div class="year-container-text">
                 <h2>My failures of previous year</h2>
-                <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+                <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McFlintlock.</p>
                 <p><i class="fas fa-check"></i> Contrary to popular belief, is not simply.</p>
                 <p><i class="fas fa-check"></i> Contrary to popular belief.</p>
                 <p><i class="fas fa-check"></i> Contrary to popular , is not simply.</p>
@@ -49,22 +49,22 @@
             </div>
             <div class="plans-container">
                 <div class="single-item">
-                    <img src="/images/icons/web.png" alt="">
+                    <img src="images/icons/web.png" alt="">
                     <h2>Web Development</h2>
                     <p>I want to start</p>
                 </div>
                 <div class="single-item">
-                    <img src="/images/icons/js.png" alt="">
+                    <img src="images/icons/js.png" alt="">
                     <h2>Javascript</h2>
                     <p>I want to learn</p>
                 </div>
                 <div class="single-item">
-                    <img src="/images/icons/smoke.png" alt="">
+                    <img src="images/icons/smoke.png" alt="">
                     <h2>Smoking Habit</h2>
                     <p>I want to end</p>
                 </div>
                 <div class="single-item">
-                    <img src="/images/icons/ecom.png" alt="">
+                    <img src="images/icons/ecom.png" alt="">
                     <h2>E-commerce</h2>
                     <p>I want to develop</p>
                 </div>
@@ -119,9 +119,9 @@
                 <br> but the majority have suffered alternation in some form,<br> by injected humour, or randomised words.</p>
                 <p>Email : info@gmail.com</p>
                 <p>Phone : 01500 00 00 00</p>
-                <img src="/images/icons/fb.png" alt="">
-                <img src="/images/icons/twitter.png" alt="">
-                <img src="/images/icons/youtube.png" alt="">
+                <img src="images/icons/fb.png" alt="">
+                <img src="images/icons/twitter.png" alt="">
+                <img src="images/icons/youtube.png" alt="">
             </div>
             <div class="single-container">
                 <h3>Subscribe</h3>
