--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>first-website</title>
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="./styles/styles.css">
 
     <!-- font awesome link here  -->
 
@@ -26,7 +26,7 @@
     <main>
         <section class="year-container">
             <div class="year-container-img">
-                <img src="./images/person.png" alt="">
+                <img src="person.png" alt="">
             </div>
             <div class="year-container-text">
                 <h2>My failures of previous year</h2>
@@ -49,22 +49,22 @@
             </div>
             <div class="plans-container">
                 <div class="single-item">
-                    <img src="./images/icons/web.png" alt="">
+                    <img src="web.png" alt="">
                     <h2>Web Development</h2>
                     <p>I want to start</p>
                 </div>
                 <div class="single-item">
-                    <img src="./images/icons/js.png" alt="">
+                    <img src="js.png" alt="">
                     <h2>Javascript</h2>
                     <p>I want to learn</p>
                 </div>
                 <div class="single-item">
-                    <img src="./images/icons/smoke.png" alt="">
+                    <img src="smoke.png" alt="">
                     <h2>Smoking Habit</h2>
                     <p>I want to end</p>
                 </div>
                 <div class="single-item">
-                    <img src="./images/icons/ecom.png" alt="">
+                    <img src="ecom.png" alt="">
                     <h2>E-commerce</h2>
                     <p>I want to develop</p>
                 </div>
@@ -119,9 +119,9 @@
                 <br> but the majority have suffered alternation in some form,<br> by injected humour, or randomised words.</p>
                 <p>Email : info@gmail.com</p>
                 <p>Phone : 01500 00 00 00</p>
-                <img src="./images/icons/fb.png" alt="">
-                <img src="./images/icons/twitter.png" alt="">
-                <img src="./images/icons/youtube.png" alt="">
+                <img src="fb.png" alt="">
+                <img src="twitter.png" alt="">
+                <img src="youtube.png" alt="">
             </div>
             <div class="single-container">
                 <h3>Subscribe</h3>
