--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <main>
         <section class="year-container">
             <div class="year-container-img">
-                <img src="person.png" alt="">
+                <img src="./images/person.png" alt="">
             </div>
             <div class="year-container-text">
                 <h2>My failures of previous year</h2>
@@ -49,22 +49,22 @@
             </div>
             <div class="plans-container">
                 <div class="single-item">
-                    <img src="web.png" alt="">
+                    <img src="./images/web.png" alt="">
                     <h2>Web Development</h2>
                     <p>I want to start</p>
                 </div>
                 <div class="single-item">
-                    <img src="js.png" alt="">
+                    <img src="./images/js.png" alt="">
                     <h2>Javascript</h2>
                     <p>I want to learn</p>
                 </div>
                 <div class="single-item">
-                    <img src="smoke.png" alt="">
+                    <img src="./images/smoke.png" alt="">
                     <h2>Smoking Habit</h2>
                     <p>I want to end</p>
                 </div>
                 <div class="single-item">
-                    <img src="ecom.png" alt="">
+                    <img src="./images/ecom.png" alt="">
                     <h2>E-commerce</h2>
                     <p>I want to develop</p>
                 </div>
@@ -119,9 +119,9 @@
                 <br> but the majority have suffered alternation in some form,<br> by injected humour, or randomised words.</p>
                 <p>Email : info@gmail.com</p>
                 <p>Phone : 01500 00 00 00</p>
-                <img src="fb.png" alt="">
-                <img src="twitter.png" alt="">
-                <img src="youtube.png" alt="">
+                <img src="./images/fb.png" alt="">
+                <img src="./images/twitter.png" alt="">
+                <img src="./images/youtube.png" alt="">
             </div>
             <div class="single-container">
                 <h3>Subscribe</h3>
